--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <div id="tougcomsys" class="list">
-        <div id="columns">
+        <div id="columns" class="columns">
             {% for p in places %}
                 {% if forloop.first %}
                     <div id="column_first" class="column">
                         {% for post in p.posts %}
-                            <div class="post">
+                            <div class="post{% if post.list_image %} post_with_image{% else %} post_without_image{% endif %}">
                                 {% if post.list_image %}
                                     <div class="listimage">
                                         <a href="{% url 'tougcomsys:post' post.slug %}"><img src="{{ post.list_image.url }}"></a>
