CSS Change color of h2 ahd h3

--- a/static/tougcomsys/tougcomsys_green.css
+++ b/static/tougcomsys/tougcomsys_green.css
@@ -35,11 +35,11 @@
     }
 
     div.list div.title h3 {
-        color:#7aff95;
+        color: #034e3f;
     }
 
     div.list div.title h3 a {
-        color:#7aff95;
+        color:#034e3f;
     }
 
 
@@ -55,11 +55,11 @@
     }
 
     .detail .title h3 {
-        color:#7aff95;
+        color:#034e3f;
     }
 
     .detail .title h3 a {
-        color:#7aff95;
+        color:#034e3f;
     }
 
     #footer {
@@ -106,11 +106,11 @@
     }
 
     div.list div.title h3 {
-        color:#7aff95;
+        color:#034e3f;
     }
 
     div.list div.title h3 a {
-        color:#7aff95;
+        color:#034e3f;
     }
 
     /* detail */
@@ -125,13 +125,12 @@
     }
 
     .detail .title h3 {
-        color:#7aff95;
+        color:#034e3f;
     }
 
     .detail .title h3 a {
-        color:#7aff95;
+        color:#034e3f;
     }
-
 
     #footer {
         background-color:#034e3f;
